--- a/schedule-admin/src/main/webapp/WEB-INF/web.xml
+++ b/schedule-admin/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,22 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <servlet>
+        <servlet-name>ReportServer</servlet-name>
+        <servlet-class>com.fr.web.ReportServlet</servlet-class>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReportServer</servlet-name>
+        <url-pattern>/ReportServer</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>frontDispatch</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
     <filter>
         <filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
         <filter-class>
@@ -39,10 +55,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <servlet-mapping>
-        <servlet-name>frontDispatch</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
 
     <!--  编码过滤器 -->
     <filter>
