--- a/schedule-business/pom.xml
+++ b/schedule-business/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>schedule</artifactId>
@@ -133,17 +133,17 @@
             <version>${version.poi}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-core</artifactId>
-            <version>${version.lucene}</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.apache.lucene</groupId>-->
+        <!--<artifactId>lucene-core</artifactId>-->
+        <!--<version>${version.lucene}</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-queryparser</artifactId>
-            <version>${version.lucene}</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.apache.lucene</groupId>-->
+        <!--<artifactId>lucene-queryparser</artifactId>-->
+        <!--<version>${version.lucene}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -163,11 +163,11 @@
             <version>${version.shiro}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.wltea</groupId>
-            <artifactId>analyzer</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.wltea</groupId>-->
+        <!--<artifactId>analyzer</artifactId>-->
+        <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
         <!--<groupId>com.chenlb.mmseg4j</groupId>-->
