--- a/schedule-admin/src/main/webapp/WEB-INF/finedb/db.properties
+++ b/schedule-admin/src/main/webapp/WEB-INF/finedb/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.1.3
-#Thu Sep 24 15:58:59 CST 2015
+#Fri Sep 25 16:44:45 CST 2015
 hsqldb.applog=0
 hsqldb.cache_file_scale=8
 runtime.gc_interval=0
@@ -8,11 +8,11 @@ modified=yes
 hsqldb.script_format=0
 hsqldb.incremental_backup=false
 hsqldb.cache_size_scale=8
-hsqldb.lock_file=true
+hsqldb.lock_file=false
 hsqldb.cache_scale=8
 hsqldb.log_size=2
 sql.enforce_strict_size=false
-readonly=false
+readonly=true
 hsqldb.compatible_version=1.8.0
 hsqldb.original_version=1.8.1
 hsqldb.nio_data_file=true
