--- a/schedule-admin/src/main/webapp/WEB-INF/web.xml
+++ b/schedule-admin/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
 
     <!--  编码过滤器 -->
     <filter>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>characterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
@@ -69,11 +69,10 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
+
     <filter-mapping>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>characterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
 
     <!-- Shiro filter -->
