--- a/schedule-business/pom.xml
+++ b/schedule-business/pom.xml
@@ -163,6 +163,14 @@
             <version>${version.shiro}</version>
         </dependency>
 
+        <dependency>
+            <groupId>pinyin4j</groupId>
+            <artifactId>net.sourceforge</artifactId>
+            <version>2.5.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/main/lib/pinyin4j-2.5.0.jar</systemPath>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>org.wltea</groupId>-->
         <!--<artifactId>analyzer</artifactId>-->
