--- a/schedule-admin/src/main/webapp/WEB-INF/web.xml
+++ b/schedule-admin/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         metadata-complete="true"
          version="3.0">
     <display-name>管理系统后台</display-name>
 
